force-app/main/default/objects/Account/fields/accounttype__c.field-meta.xml
<CustomField>
    <fullName>accounttype__c</fullName>
    <label>Place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>outside india</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>