force-app/main/default/objects/Account/fields/Address_Changed__c.field-meta.xml
<CustomField>
    <fullName>Address_Changed__c</fullName>
    <label>Address Changed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>