force-app/main/default/objects/Account/fields/case_closed_date__c.field-meta.xml
<CustomField>
    <fullName>case_closed_date__c</fullName>
    <description>this is the field when the case related to this account get resolved the date is saved in this field.</description>
    <label>case closed date</label>
    <type>Date</type>
</CustomField>