force-app/main/default/objects/Account/fields/client_contact__c.field-meta.xml
<CustomField>
    <fullName>client_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>client contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>