force-app/main/default/objects/Account/fields/extIdtext__c.field-meta.xml
<CustomField>
    <fullName>extIdtext__c</fullName>
    <externalId>true</externalId>
    <label>extIdtext</label>
    <length>18</length>
    <type>Text</type>
</CustomField>