force-app/main/default/objects/Account/fields/house_address__c.field-meta.xml
<CustomField>
    <fullName>house_address__c</fullName>
    <label>house address</label>
    <type>TextArea</type>
</CustomField>