force-app/main/default/objects/Account/fields/individual_phone_no__c.field-meta.xml
<CustomField>
    <fullName>individual_phone_no__c</fullName>
    <label>individual phone no</label>
    <type>Phone</type>
</CustomField>