force-app/main/default/objects/Account/fields/isActiveTestA__c.field-meta.xml
<CustomField>
    <fullName>isActiveTestA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isActiveTestA</label>
    <type>Checkbox</type>
</CustomField>