force-app/main/default/objects/Account/fields/maxoppamount__c.field-meta.xml
<CustomField>
    <fullName>maxoppamount__c</fullName>
    <label>maxoppamount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>