force-app/main/default/objects/Account/fields/opp_count__c.field-meta.xml
<CustomField>
    <fullName>opp_count__c</fullName>
    <label>opp count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>