force-app/main/default/objects/Account/fields/org_ceo_name__c.field-meta.xml
<CustomField>
    <fullName>org_ceo_name__c</fullName>
    <label>org ceo name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>