force-app/main/default/objects/Account/fields/org_pan_number__c.field-meta.xml
<CustomField>
    <fullName>org_pan_number__c</fullName>
    <label>org pan number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>