force-app/main/default/objects/Account/fields/organization_name__c.field-meta.xml
<CustomField>
    <fullName>organization_name__c</fullName>
    <label>organization name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>