force-app/main/default/objects/Account/fields/other_phone_number__c.field-meta.xml
<CustomField>
    <fullName>other_phone_number__c</fullName>
    <description>alternative phone number</description>
    <label>other phone number</label>
    <type>Phone</type>
</CustomField>