force-app/main/default/objects/Account/fields/rollupopp__c.field-meta.xml
<CustomField>
    <fullName>rollupopp__c</fullName>
    <label>rollupopp</label>
    <summarizedField>Opportunity.Total_Line_Item_Price__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>