force-app/main/default/objects/Account/fields/test_rollup_field__c.field-meta.xml
<CustomField>
    <fullName>test_rollup_field__c</fullName>
    <description>sum of contacts</description>
    <label>test rollup field</label>
    <summaryForeignKey>Customer__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>