force-app/main/default/objects/Account/fields/testhyperlink__c.field-meta.xml
<CustomField>
    <fullName>testhyperlink__c</fullName>
    <formula>HYPERLINK(&quot;https://www.google.com&quot;, &quot;Googlesearch&quot;,&quot;__blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testhyperlink</label>
    <type>Text</type>
</CustomField>