force-app/main/default/objects/Account/recordTypes/individual.recordType-meta.xml
<RecordType>
    <fullName>individual</fullName>
    <active>true</active>
    <label>individual</label>
</RecordType>