force-app/main/default/objects/Account/recordTypes/organization.recordType-meta.xml
<RecordType>
    <fullName>organization</fullName>
    <active>true</active>
    <label>organization</label>
</RecordType>