force-app/main/default/objects/Account/validationRules/priority_change.validationRule-meta.xml
<ValidationRule>
    <fullName>priority_change</fullName>
    <active>true</active>
    <description>The error displays if the priority changes from high to low.</description>
    <errorConditionFormula>AND(ISCHANGED( priority_field__c ),ISPICKVAL( priority_field__c,&quot;low&quot;))</errorConditionFormula>
    <errorMessage>priority should not changed to low</errorMessage>
</ValidationRule>